Changelog
=========

All notable changes to this project will be documented in this file.

The format is based on `Keep a Changelog <http://keepachangelog.com/>`_
and this project adheres to `Semantic Versioning <http://semver.org/>`_

UNRELEASED VERSION
------------------

Fixed
~~~~~

- Allow user to login using a token (the username check will catch this an allow it)

Changed
~~~~~~~

- Improved the logging by reducing spam at the INFO/DEBUG levels. The debug parameter
  on connect can now be used to enable the logging of xnatpy internals.

0.3.5 - 2018-01-02
------------------

Fixed
~~~~~

- There were bugs in the prearchive breaking the entire pre-archive funcationaly

0.3.4 - 2017-11-13
------------------

Fixed
~~~~~

- Files in assessors would have a path prefixed with a / in some cases (which should never happen)

0.3.3 - 2017-10-18
------------------

Changed
~~~~~~~

- Abstracted the progress bar for downloading to allow other progress hooks (e.g. GUI)

Fixed
~~~~~

- Set proper minimal versions for requirements (e.g. six can be too old)
- Bug in upload for Python3
- Bug with getting the file size when there are redirects (issue #8)
- Bug with getting files from a project/subject/experiment/scan directly instead of via resource (issue #5)


0.3.2 - 2017-10-15
------------------

Fixed
~~~~~

- Bug in the the create_object function in the selection of the non-history object
- Bug in the setting of project properties (due to the lack of a parent)

0.3.1 - 2017-09-04
------------------

Changed
~~~~~~~

- FileData now has an id and path, the id is the filename and the path is the
  path relative from the resource. This makes working with subdirectories in
  resources possible.

Fixed
~~~~~

- Bug where history of XNAT was misinterpreted and an old version of an object could be loaded
- Resources could loose track of their ID when the cache was cleared
- Resources did not invalidate cache after uploading files


0.3.0 - 2017-08-17
------------------

Added